# fingo

./: Cargo.toml
docs/plans/: 2026-03-02-feat-fingo-gemini-image-cli-plan.md
src/: api.rs  error.rs  keychain.rs  main.rs  models.rs
