[package]
name = "fingo"
version = "0.1.0"
edition = "2024"
description = "AI image generation and editing CLI powered by Google Nano Banana / Gemini"
license = "MIT"
repository = "https://github.com/terryli710/fingo"
keywords = ["ai", "image", "gemini", "inpainting", "cli"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
